compiler02/src/syntax.output
Terminals unused in grammar

   LOWER_THAN_ELSE


状态 24conflicts: 1 shift/reduce
状态 29conflicts: 1 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* 空 */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag LC error RC

   15 OptTag: ID
   16       | /* 空 */

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | /* 空 */

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | IF LP Exp RP error ELSE Stmt
   37     | RETURN error SEMI
   38     | error SEMI

   39 DefList: Def DefList
   40        | /* 空 */

   41 Def: Specifier DecList SEMI
   42    | error SEMI
   43    | error TYPE

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT
   66    | Exp PLUS error
   67    | Exp MINUS error
   68    | Exp RELOP error
   69    | Exp LB error RB
   70    | LB error RB
   71    | error LP

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 22 27 36 37 38 42 43 66 67 68 69 70 71
SEMI (258) 4 5 7 30 32 37 38 41 42
COMMA (259) 9 23 45 72
ASSIGNOP (260) 47 48
RELOP (261) 51 68
AND (262) 49
OR (263) 50
PLUS (264) 52 66
MINUS (265) 53 57 67
STAR (266) 54
DIV (267) 55
DOT (268) 62
NOT (269) 58
LP (270) 20 21 22 33 34 35 36 56 59 60 71
RP (271) 20 21 22 33 34 35 36 56 59 60
LB (272) 19 61 69 70
RB (273) 19 61 69 70
LC (274) 12 14 26
RC (275) 12 14 26 27
STRUCT (276) 12 13 14
RETURN (277) 32 37
IF (278) 33 34 36
ELSE (279) 34 36
WHILE (280) 35
ID (281) 15 17 18 20 21 22 59 60 62 63
INT (282) 19 64
FLOAT (283) 65
TYPE (284) 10 43
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7, 右： 2
ExtDecList (35)
    左： 8 9, 右： 4 9
Specifier (36)
    左： 10 11, 右： 4 5 6 7 25 41
StructSpecifier (37)
    左： 12 13 14, 右： 11
OptTag (38)
    左： 15 16, 右： 12 14
Tag (39)
    左： 17, 右： 13
VarDec (40)
    左： 18 19, 右： 8 9 19 25 46 47
FunDec (41)
    左： 20 21 22, 右： 6 7
VarList (42)
    左： 23 24, 右： 20 23
ParamDec (43)
    左： 25, 右： 23 24
CompSt (44)
    左： 26 27, 右： 6 31
StmtList (45)
    左： 28 29, 右： 26 28
Stmt (46)
    左： 30 31 32 33 34 35 36 37 38, 右： 28 33 34 35 36
DefList (47)
    左： 39 40, 右： 12 26 39
Def (48)
    左： 41 42 43, 右： 39
DecList (49)
    左： 44 45, 右： 41 45
Dec (50)
    左： 46 47, 右： 44 45
Exp (51)
    左： 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71, 右： 30 32 33 34 35 36 47 48 49 50 51 52 53 54
    55 56 57 58 61 62 66 67 68 69 72 73
Args (52)
    左： 72 73, 右： 59 72


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec error SEMI

    SEMI  shift, and go to state 13
    ID    shift, and go to state 14

    ExtDecList  转到状态 15
    VarDec      转到状态 16
    FunDec      转到状态 17


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 14

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . LP error RP

    LP  shift, and go to state 19

    $default  reduce using rule 18 (VarDec)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 8 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . error SEMI

    error  shift, and go to state 23
    LC     shift, and go to state 24

    CompSt  转到状态 25


State 18

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . error RC

    error   shift, and go to state 26
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    RC  reduce using rule 40 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 28
    Def              转到状态 29


State 19

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP
   22       | ID LP . error RP

    error   shift, and go to state 30
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        转到状态 32
    StructSpecifier  转到状态 7
    VarList          转到状态 33
    ParamDec         转到状态 34


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  转到状态 36
    VarDec      转到状态 16


State 22

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 37


State 23

    7 ExtDef: Specifier FunDec error . SEMI
   27 CompSt: error . RC

    SEMI  shift, and go to state 38
    RC    shift, and go to state 39


State 24

   26 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 40
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    error   [reduce using rule 40 (DefList)]
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LB      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 41
    Def              转到状态 29


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   14 StructSpecifier: STRUCT OptTag LC error . RC
   42 Def: error . SEMI
   43    | error . TYPE

    SEMI  shift, and go to state 42
    RC    shift, and go to state 43
    TYPE  shift, and go to state 44


State 27

   41 Def: Specifier . DecList SEMI

    ID  shift, and go to state 35

    VarDec   转到状态 45
    DecList  转到状态 46
    Dec      转到状态 47


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 29

   39 DefList: Def . DefList

    error   shift, and go to state 40
    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    error   [reduce using rule 40 (DefList)]
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LB      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 49
    Def              转到状态 29


State 30

   22 FunDec: ID LP error . RP

    RP  shift, and go to state 50


State 31

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 32

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  转到状态 51


State 33

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 34

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 24 (VarList)


State 35

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 36

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 37

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 54


State 38

    7 ExtDef: Specifier FunDec error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 39

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 40

   42 Def: error . SEMI
   43    | error . TYPE

    SEMI  shift, and go to state 42
    TYPE  shift, and go to state 44


State 41

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LB      shift, and go to state 59
    LC      shift, and go to state 24
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    ID      shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65

    RC  reduce using rule 29 (StmtList)

    CompSt    转到状态 66
    StmtList  转到状态 67
    Stmt      转到状态 68
    Exp       转到状态 69


State 42

   42 Def: error SEMI .

    $default  reduce using rule 42 (Def)


State 43

   14 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 44

   43 Def: error TYPE .

    $default  reduce using rule 43 (Def)


State 45

   19 VarDec: VarDec . LB INT RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 22

    $default  reduce using rule 46 (Dec)


State 46

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 71


State 47

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 44 (DecList)


State 48

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 49

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 50
